Fix spacing in facet

--- a/freesound/static/bw-frontend/styles/pages/search.scss
+++ b/freesound/static/bw-frontend/styles/pages/search.scss
@@ -42,7 +42,6 @@
 .bw-search__filter-section {
 
   padding-top: $tiny-spacing;
-  padding-bottom: $small-spacing;
 
   .bw-search__filter-section-name > span {
     font-size: 18px;
